--- a/index.html
+++ b/index.html
@@ -1,7 +1,130 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Abel Brazal | Portfolio</title>
+  <style>
+    :root {
+      --bg: #fdfdfd;
+      --text: #333;
+      --accent: #007acc;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background: var(--accent);
+      color: white;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+
+    nav {
+      text-align: center;
+      margin-top: 1rem;
+    }
+
+    nav a {
+      margin: 0 1rem;
+      color: var(--accent);
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    section {
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+
+    h2 {
+      color: var(--accent);
+      margin-bottom: 0.5rem;
+    }
+
+    ul.projects {
+      list-style: none;
+      padding: 0;
+    }
+
+    ul.projects li {
+      background: #f0f0f0;
+      margin-bottom: 10px;
+      padding: 10px;
+      border-radius: 6px;
+    }
+
+    .contact-links a {
+      display: inline-block;
+      margin-right: 1rem;
+      text-decoration: none;
+      color: var(--accent);
+    }
+
+    footer {
+      text-align: center;
+      font-size: 0.9rem;
+      margin: 4rem 0 1rem;
+      color: #aaa;
+    }
+  </style>
+</head>
 <body>
-  <h1>Cripher</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+
+  <header>
+    <h1>Abel Brazal</h1>
+    <p>Escalations Engineer | Aspiring Software Developer</p>
+  </header>
+
+  <nav>
+    <a href="#about">About</a>
+    <a href="#projects">Projects</a>
+    <a href="#skills">Skills</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>THIS PART IS UNDER CONSTRUCTION...</p>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <ul class="projects">
+      <li>
+        <strong>Cripher – Simple Password Generator</strong><br />
+        <a href="https://abelbrazal.github.io/Cripher-Simple-Password-Generator/" target="_blank">🔗 Live Demo</a> |
+        <a href="https://github.com/abelbrazal/Cripher-Simple-Password-Generator" target="_blank">📂 Source Code</a>
+      </li>
+    </ul>
+  </section>
+
+  <section id="skills">
+    <h2>Skills</h2>
+    <p><strong>Languages:</strong> THIS PART IS UNDER CONSTRUCTION...</p>
+    <p><strong>Tools:</strong> THIS PART IS UNDER CONSTRUCTION...</p>
+    <p><strong>Platforms:</strong> THIS PART IS UNDER CONSTRUCTION...</p>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <div class="contact-links">
+      <a href="https://github.com/abelbrazal" target="_blank">GitHub</a>
+      <a href="mailto:abelbrazal@gmail.com">Email</a>
+      <a href="https://www.linkedin.com/in/abelbrazal/" target="_blank">LinkedIn</a>
+    </div>
+  </section>
+
+  <footer>
+    &copy; 2025 Abel Brazal. Built using GitHub Pages.
+  </footer>
+
 </body>
 </html>
