--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
 <body>
 
   <header>
+    <h1>THIS PAGE IS UNDER CONSTRUCTION...</h1>
     <h1>Abel Brazal</h1>
-    <p>Escalations Engineer | Aspiring Software Developer</p>
+    <!--<p>Escalations Engineer | Aspiring Software Developer</p>-->
   </header>
 
   <nav>
